--- a/css/projects/type-f-12.css
+++ b/css/projects/type-f-12.css
@@ -232,9 +232,6 @@
   font-size: 13px;
   font-style: italic;
 }
-.type-f-12 .container-fluid .top-nav .navbar-right li ul.msg_list li .text-center a {
-  text-decoration: none;
-}
 .type-f-12 .container-fluid .top-nav .navbar-right li ul.msg_list li:hover {
   background-color: none;
 }
@@ -322,169 +319,83 @@
 .type-f-12 .container-fluid .admin-panel .admin-title ul.items .close-link {
   opacity: 1;
 }
-.type-f-12 .container-fluid .admin-panel .admin-content .product-img,
-.type-f-12 .container-fluid .admin-panel .admin-content .product-name {
-  margin-top: 15px;
+.type-f-12 .container-fluid .admin-panel .admin-content p {
+  margin-top: 10px;
 }
-.type-f-12 .container-fluid .admin-panel .admin-content .product-img img#main {
-  max-width: 100%;
+.type-f-12 .container-fluid .admin-panel .admin-content table tbody tr .title-name {
+  color: #5A738E;
+  text-decoration: none;
 }
-.type-f-12 .container-fluid .admin-panel .admin-content .product-gallery a {
-  width: 100px;
-  height: 100px;
-  float: left;
-  margin: 10px;
-  border: 1px solid #e5e5e5;
+.type-f-12 .container-fluid .admin-panel .admin-content table tbody tr .title-name:hover {
+  color: #23527c;
 }
-.type-f-12 .container-fluid .admin-panel .admin-content .product-gallery a img {
-  max-width: 100%;
-  margin-top: 15px;
-}
-.type-f-12 .container-fluid .admin-panel .admin-content .product-name {
-  border-bottom: 1px solid #e0e0e0;
-}
-.type-f-12 .container-fluid .admin-panel .admin-content .product-info p.description {
-  padding: 25px 0;
-}
-.type-f-12 .container-fluid .admin-panel .admin-content .product-info .product-color ul.color-name {
-  padding-left: 0;
-  margin-left: -5px;
-  list-style: none;
-}
-.type-f-12 .container-fluid .admin-panel .admin-content .product-info .product-color ul.color-name li {
-  margin: 0 10px;
-  padding: 0 5px;
-  float: left;
-}
-.type-f-12 .container-fluid .admin-panel .admin-content .product-info .product-color ul.color-name li p {
-  margin-bottom: 0;
-}
-.type-f-12 .container-fluid .admin-panel .admin-content .product-info .product-color ul.color-name li .color {
-  width: 25px;
-  height: 25px;
-  border: 2px solid rgba(51,51,51,0.28) !important;
+.type-f-12 .container-fluid .admin-panel .admin-content table tbody tr img.avartar {
+  height: 32px;
+  width: 32px;
   padding: 2px;
-  border-radius: 50px;
+  border-radius: 2px;
+  margin-left: 5px;
+  border: 1px solid #e6e6e6;
 }
-.type-f-12 .container-fluid .admin-panel .admin-content .product-info .product-color ul.color-name li .color.green {
+.type-f-12 .container-fluid .admin-panel .admin-content table tbody tr .project-progress .progress {
+  margin-bottom: 3px !important;
+  margin-top: 5px;
+}
+.type-f-12 .container-fluid .admin-panel .admin-content table tbody tr .project-progress .progress-bar {
   background: #1ABB9C !important;
+  border: 1px solid #1ABB9C !important;
   color: #fff;
 }
-.type-f-12 .container-fluid .admin-panel .admin-content .product-info .product-color ul.color-name li .color.blue {
-  background: #3498DB !important;
-  color: #fff;
-}
-.type-f-12 .container-fluid .admin-panel .admin-content .product-info .product-color ul.color-name li .color.red {
-  background: #E74C3C !important;
-  color: #fff;
-}
-.type-f-12 .container-fluid .admin-panel .admin-content .product-info .product-color ul.color-name li .color.orange {
-  background: #F39C12 !important;
-  color: #fff;
-}
-.type-f-12 .container-fluid .admin-panel .admin-content .product-info .product-size {
-  padding: 25px 0;
-}
-.type-f-12 .container-fluid .admin-panel .admin-content .product-info .product-size ul.size-name {
-  padding-left: 0;
-  margin-left: -5px;
-  list-style: none;
-}
-.type-f-12 .container-fluid .admin-panel .admin-content .product-info .product-size ul.size-name li {
-  margin: 0;
-  padding: 0 5px;
-  float: left;
-}
-.type-f-12 .container-fluid .admin-panel .admin-content .product-info .product-size ul.size-name li a.btn-size {
-  margin-bottom: 5px;
-  margin-right: 5px;
-  color: #333;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  text-decoration: none;
-  padding: 1px 5px;
-  border-radius: 3px;
-  font-size: 12px;
-}
-.type-f-12 .container-fluid .admin-panel .admin-content .product-info .product-size ul.size-name li a.btn-size:hover {
-  background-color: #e6e6e6;
-  border-color: #adadad;
-}
-.type-f-12 .container-fluid .admin-panel .admin-content .product-info .product-price {
-  margin-top: 50px;
-  padding: 5px 10px;
-  background-color: #FFF;
-  text-align: left;
-  border: 2px dashed #E0E0E0;
-}
-.type-f-12 .container-fluid .admin-panel .admin-content .product-info .product-price .price {
-  color: #26B99A;
-  margin: 0;
-  font-weight: 400;
-}
-.type-f-12 .container-fluid .admin-panel .admin-content .product-info .product-price .price-tax {
-  font-size: 18px;
-}
-.type-f-12 .container-fluid .admin-panel .admin-content .product-info .product-btnadd {
-  margin-top: 25px;
-}
-.type-f-12 .container-fluid .admin-panel .admin-content .product-info .product-btnadd .add-to-cart {
-  margin-bottom: 5px;
-  margin-right: 5px;
-  color: #333;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  padding: 10px 16px;
+.type-f-12 .container-fluid .admin-panel .admin-content table tbody tr .status {
+  background-color: #169F85;
+  padding: 5px 5px;
+  color: #ffffff;
+  border: 1px solid #398439;
   border-radius: 5px;
-  font-size: 18px;
   text-decoration: none;
+  display: inline-block;
 }
-.type-f-12 .container-fluid .admin-panel .admin-content .product-info .product-btnadd .add-to-cart:hover {
-  background-color: #e6e6e6;
-  border-color: #adadad;
+.type-f-12 .container-fluid .admin-panel .admin-content table tbody tr .status:hover {
+  background-color: #449d44;
 }
-.type-f-12 .container-fluid .admin-panel .admin-content .product-info .product-social {
-  margin-top: 35px;
+.type-f-12 .container-fluid .admin-panel .admin-content table tbody tr .btn-function .view,
+.type-f-12 .container-fluid .admin-panel .admin-content table tbody tr .btn-function .edit,
+.type-f-12 .container-fluid .admin-panel .admin-content table tbody tr .btn-function .delete {
+  padding: 5px 5px;
+  text-decoration: none;
+  color: #ffffff;
+  border-radius: 5px;
+  margin-left: 8px;
+  display: inline-block;
 }
-.type-f-12 .container-fluid .admin-panel .admin-content .product-info .product-social ul.list-social {
-  padding-left: 0;
-  margin-left: -5px;
-  list-style: none;
+.type-f-12 .container-fluid .admin-panel .admin-content table tbody tr .btn-function .view i,
+.type-f-12 .container-fluid .admin-panel .admin-content table tbody tr .btn-function .edit i,
+.type-f-12 .container-fluid .admin-panel .admin-content table tbody tr .btn-function .delete i {
+  padding-right: 3px;
 }
-.type-f-12 .container-fluid .admin-panel .admin-content .product-info .product-social ul.list-social li {
-  float: left;
-  padding: 0 4px;
-  margin: 0;
+.type-f-12 .container-fluid .admin-panel .admin-content table tbody tr .btn-function .view {
+  background-color: #286090;
+  border: 1px solid #46b8da;
 }
-.type-f-12 .container-fluid .admin-panel .admin-content .product-info .product-social ul.list-social li a {
-  color: #5A738E;
+.type-f-12 .container-fluid .admin-panel .admin-content table tbody tr .btn-function .view:hover {
+  background-color: #337ab7;
 }
-.type-f-12 .container-fluid .admin-panel .admin-content .product-info .product-social ul.list-social li a i {
-  font-size: 35px;
+.type-f-12 .container-fluid .admin-panel .admin-content table tbody tr .btn-function .edit {
+  background-color: #5bc0de;
+  border: 1px solid #269abc;
 }
-.type-f-12 .container-fluid .admin-panel .admin-content .product-info .product-social ul.list-social li a:hover {
-  color: #337ab7;
+.type-f-12 .container-fluid .admin-panel .admin-content table tbody tr .btn-function .edit:hover {
+  background-color: #31b0d5;
 }
-.type-f-12 .container-fluid .admin-panel .admin-content ul.nav-tabs {
-  margin-top: 25px;
-  padding-left: 10px;
-  background: #F5F7FA;
+.type-f-12 .container-fluid .admin-panel .admin-content table tbody tr .btn-function .delete {
+  background-color: #d9534f;
+  border: 1px solid #d43f3a;
 }
-.type-f-12 .container-fluid .admin-panel .admin-content ul.nav-tabs li {
-  color: #333 !important;
-  background: #F5F7FA;
-  border-bottom: none;
-  border-radius: 4px 4px 0 0;
+.type-f-12 .container-fluid .admin-panel .admin-content table tbody tr .btn-function .delete:hover {
+  background-color: #c9302c;
 }
-.type-f-12 .container-fluid .admin-panel .admin-content ul.nav-tabs li a {
-  color: #5A738E;
-}
-.type-f-12 .container-fluid .admin-panel .admin-content .tab-content {
-  padding: 10px 0;
-}
-.type-f-12 .container-fluid .admin-panel .admin-content .tab-content #menu1,
-.type-f-12 .container-fluid .admin-panel .admin-content .tab-content #menu2 {
-  padding: 0;
+.type-f-12 .container-fluid .admin-panel .admin-content table tbody tr:nth-child(even) {
+  background-color: #f2f2f2;
 }
 .type-f-12 .container-fluid .page-content-wrraper {
   background-color: #ffffff;
@@ -532,9 +443,6 @@
   }
   .content .content-right {
     margin-top: -5px;
-  }
-  .product-name h3 {
-    display: inline-block;
   }
 }
 .type-f-12.toggled {
