--- a/css/projects/type-f-12.css
+++ b/css/projects/type-f-12.css
@@ -340,11 +340,13 @@
 .type-f-12 .container-fluid .admin-panel .admin-content table tbody tr .project-progress .progress {
   margin-bottom: 3px !important;
   margin-top: 5px;
+  height: 10px;
 }
-.type-f-12 .container-fluid .admin-panel .admin-content table tbody tr .project-progress .progress-bar {
+.type-f-12 .container-fluid .admin-panel .admin-content table tbody tr .project-progress .progress .progress-bar {
   background: #1ABB9C !important;
   border: 1px solid #1ABB9C !important;
   color: #fff;
+  height: 10px !important;
 }
 .type-f-12 .container-fluid .admin-panel .admin-content table tbody tr .status {
   background-color: #169F85;
