--- a/less/dashboard3/type-f-12.less
+++ b/less/dashboard3/type-f-12.less
@@ -419,6 +419,7 @@ and open the template in the editor.
                         width: 55%;
                         .progress{
                             border-radius: 0px;
+
                         }
                         .bg-green {
                             background: #1ABB9C!important;
@@ -598,6 +599,12 @@ and open the template in the editor.
                 margin-top: 5px;
                 width: 100%;
 
+                .progress {
+                    height: 10px;
+                    .progress-bar {
+                        height: 10px!important;
+                    }
+                }
                 h2 {
                     font-size: 20px;
                 }
