--- a/less/projects/35.less
+++ b/less/projects/35.less
@@ -129,8 +129,10 @@ and open the template in the editor.
                             .progress {
                                 margin-bottom: 3px!important;
                                 margin-top: 5px;
+                                height: 10px;
                             }
                             .progress-bar {
+                                height: 10px!important;
                                 background: #1ABB9C!important;
                                 border: 1px solid #1ABB9C!important;
                                 color: #fff;
