--- a/less/projects/type-f-12.less
+++ b/less/projects/type-f-12.less
@@ -384,12 +384,15 @@ and open the template in the editor.
                                 .progress {
                                     margin-bottom: 3px!important;
                                     margin-top: 5px;
+                                    height: 10px;
+                                    .progress-bar {
+                                        background: #1ABB9C!important;
+                                        border: 1px solid #1ABB9C!important;
+                                        color: #fff;
+                                        height: 10px!important;
+                                    }
                                 }
-                                .progress-bar {
-                                    background: #1ABB9C!important;
-                                    border: 1px solid #1ABB9C!important;
-                                    color: #fff;
-                                }
+
                             }
                             .status {
                                 background-color: @background-color-status;
