--- a/css/projects/35.css
+++ b/css/projects/35.css
@@ -93,8 +93,10 @@
 .type-35 .admin-panel .admin-content table tbody tr .project-progress .progress {
   margin-bottom: 3px !important;
   margin-top: 5px;
+  height: 10px;
 }
 .type-35 .admin-panel .admin-content table tbody tr .project-progress .progress-bar {
+  height: 10px !important;
   background: #1ABB9C !important;
   border: 1px solid #1ABB9C !important;
   color: #fff;
