--- a/less/dashboard3/13.less
+++ b/less/dashboard3/13.less
@@ -74,6 +74,16 @@ and open the template in the editor.
             margin-top: 5px;
             width: 100%;
 
+            .info-progress {
+                .progress {
+                    height: 10px;
+                    .progress-bar {
+                        height: 10px!important;
+                    }
+                }
+            }
+
+
             h2 {
                 font-size: @font-size-title;
             }
