--- a/less/profile/43.less
+++ b/less/profile/43.less
@@ -9,14 +9,14 @@ and open the template in the editor.
 */
 
 @color-body: #73879C;
-@font-size: 17px;
 @none: none;
-@background-color-button-contact: #26B99A;
-@border-color-button-contact: #169F85;
-@border-color-button-contact-hover: #169F85;
-@background-color-button-view: #337ab7;
-@border-color-button-view: #2e6da4;
-@border-color-button-view-hover: #286090;
+@background-color-ffffff: #ffffff;
+@color-ffffff: #ffffff;
+@background-color-tabs: #F5F7FA;
+@background-color-edit: #26B99A;
+@background-color-edit-hover: #169F85;
+@border-color: #e6e6e6;
+@font-size-h3: 16px;
 
 .type-43 {
     color: @color-body;
@@ -45,7 +45,7 @@ and open the template in the editor.
                         border-radius: 0 25px 25px 0;
                         border: 1px solid rgba(221,226,232,.49);
                         border-left: 0;
-                        background-color: #ffffff;
+                        background-color:@background-color-ffffff;
                         color: #73879C;
                     }
                     .btn-search:hover {
@@ -59,7 +59,7 @@ and open the template in the editor.
         width: 100%;
         padding: 10px 17px;
         display: inline-block;
-        background: #fff;
+        background-color: @background-color-ffffff;
         border: 1px solid #E6E9ED;
         opacity: 1;
         transition: all .2s ease;
@@ -82,7 +82,7 @@ and open the template in the editor.
                 margin-right: 0;
                 min-width: 70px;
                 float: right;
-                list-style: none;
+                list-style: @none;
                 margin-top: 5px;
                 li {
                     float: left;
@@ -99,7 +99,8 @@ and open the template in the editor.
             }
         }
         .admin-content {
-            margin-top: 20px;
+            margin: 20px 8px;
+            
             .avartar-profile {
                 h4.name-profile {
                     font-size: 24px;
@@ -113,14 +114,14 @@ and open the template in the editor.
                     margin-top: 10px;
                     a {
                         padding: 7px 5px;
-                        color: #ffffff;
-                        background-color: #26B99A;
+                        color: @color-ffffff;
+                        background-color: @background-color-edit;
                         border: 1px solid #169F85;
-                        text-decoration: none;
+                        text-decoration: @none;
                         border-radius: 3px;
                     }
                     a:hover {
-                        background-color: #169F85;
+                        background-color: @background-color-edit-hover;
                     }
                 }
                 .skills {
@@ -141,6 +142,87 @@ and open the template in the editor.
                 }
 
             }
+            .user-report {
+                background-color: #F5F7FA;
+                padding: 7px 10px;
+                #reportrange {
+                    margin-top: 5px;
+                    float: right;
+                    border: 1px solid #E6E9ED;
+                    cursor: pointer;
+                    padding: 5px 10px;
+                    background-color: @background-color-ffffff;
+                }
+            }
+            #mybarChart {
+                margin-top: 25px;
+                width: 484px;
+                height: 242px;
+            }
+
+            ul.nav-tabs {
+                margin-top: 10px;
+                padding-left: 10px;
+                background-color: @background-color-tabs;
+                li {
+                    color: #333!important;
+                    background-color: @background-color-tabs;
+                    border-bottom: @none;
+                    border-radius: 4px 4px 0 0;
+                    a {
+                        color: #5A738E;
+                    }
+                }
+            }
+            .tab-content {
+                padding: 10px 0;
+                #menu1, #menu2 {
+                    padding: 0;
+                }
+                #home {
+                    ul.comments {
+                        list-style: @none;
+                        padding: 0;
+                        margin: 0;
+                        li {
+                            border-bottom: 1px dotted @border-color;
+                            padding: 8px 0;
+
+                            .img-user {
+                                height: 32px;
+                                width: 32px;
+                                float: left;
+                                display: inline-block;
+                                border-radius: 2px;
+                                padding: 2px;
+                                background-color: #f7f7f7;
+                                border: 1px solid @border-color;
+                            }
+                            .comment-content {
+                                margin-left: 50px;
+                                h4 {
+                                    margin: 0 0 10px;
+                                    cursor: pointer;
+                                    font-weight: bold;
+                                }
+                                .content {
+                                    padding: 0 10px;
+                                    margin: 0;
+                                    border-left: 5px solid #eee;
+                                }
+                                a.link-file {
+                                    text-decoration: @none;
+                                    color: @color-body;
+                                }
+                            }
+                            .date-comment {
+                                float: right;
+                                text-align: right;
+                            }
+                        }
+                    }
+                }
+            }
         }
     }
 }
@@ -149,7 +231,7 @@ and open the template in the editor.
     .content {
         .content-left {
             h3 {
-                font-size: 16px;
+                font-size: @font-size-h3;
             }
         }
         .content-right {
