--- a/less/profile/44.less
+++ b/less/profile/44.less
@@ -8,19 +8,19 @@ and open the template in the editor.
     Author     : Administrator
 */
 @color: #5A738E;
-@background: #fff;
-.type-32 {
+@none: none;
+.type-44 {
     footer {
         padding: 10px 10px;
         text-align: right;
         display: block;
         color: @color;
         a {
-            text-decoration: none;
+            text-decoration: @none;
             color: @color;
         }
         a:hover {
-            text-decoration: none;
+            text-decoration: @none;
         }
     }
 
